# signal_prediction

./: .gitignore
cimplement/: CMakeLists.txt  README
cimplement/inc/: boone_fnc.h  miniBBB.h  miniClass.h  miniSVD.h
cimplement/src/: CMakeLists.txt  miniBBB.cxx  miniClass.cxx  miniGen.cxx  miniSVD.cxx  testALL.cxx  testBBB.cxx  testSVD.cxx
combined/: .gitignore  CombinedFunctions.cxx  CombinedFunctions.h  CombinedLoader.cxx  CombinedLoader.h  CombinedTypes.h  CombinedUnfold.cxx  CombinedUnfold.h  CombinedUtil.cxx  CombinedUtil.h  LinkDef.h  Makefile  PyCombined.cxx  PyCombined.h  PySP.cxx  PySP.h  PyUnfold.h  SPTypes.h  TikonovSVD.cxx  TikonovSVD.h  UnfoldUtil.cxx  UnfoldUtil.h  setup.sh
combined/mac/: SVD_example.ipynb  analyze.py  plot_util.py
combined/test/: eigen_test.cxx
sp/: .gitignore  GNUmakefile  readme  setup.sh
sp/Algorithm/: LoadAlgorithm.h  TikonovSVD.cxx  TikonovSVD.h
sp/Base/: LinkDef.h  LoadSP.cxx  LoadSP.h  Makefile  PySP.cxx  PySP.h  SPIO.cxx  SPIO.h  SPLoader.cxx  SPLoader.h  SPManager.cxx  SPTypes.h  SPUtil.cxx  SPUtil.h  Storage.cxx  Storage.h  read.py  sp_base.cxx  sp_base.h  sp_logger.cxx  sp_logger.h  test.py
sp/Combined/: CombinedFunctions.cxx  CombinedFunctions.h  CombinedUtil.cxx  CombinedUtil.h  LinkDef.h  LoadCombined.cxx  LoadCombined.h  Makefile  PyCombined.cxx  PyCombined.h
sp/Makefile/: Makefile
sp/Unfold/: GNUmakefile  LinkDef.h  LoadUnfold.cxx  LoadUnfold.h  Makefile  Parameter.cxx  Parameter.h  PyUnfold.cxx  PyUnfold.h  Response.cxx  Response.h  SPIO.cxx  SPIO.h  SPManager.cxx  SPManager.h  Storage.cxx  Storage.h  TikonovSVD.h  UnfoldAlgoBase.cxx  UnfoldAlgoBase.h  UnfoldAlgoDAgnostini.cxx  UnfoldAlgoDAgnostini.h  UnfoldAlgoInverse.cxx  UnfoldAlgoInverse.h  UnfoldAlgoSVD.cxx  UnfoldAlgoSVD.h  UnfoldTypes.h  UnfoldUtil.cxx  UnfoldUtil.h  test.py
sp/Unfold/Algo/: LinkDef.h  Makefile  ModelEmpty.cxx  ModelEmpty.h  ModelNCDelta.cxx  ModelNCDelta.h  ModelNCpi0.cxx  ModelNCpi0.h  ModelNueCCQE.cxx  ModelNueCCQE.h  UnfoldAlgoDAgnostini.cxx  UnfoldAlgoDAgnostini.h  (+4 more)
sp/mac/: .gitignore  SVD_example.ipynb  StackedBackgrounds.py  plot_util.py
sp/test/: eigen.py  svd.py
(+30 files in other folders)
